# simwave_mod

./: README.md  setup.py
examples/: acoustic_2D.py  acoustic_2D_density.py  acoustic_3D_density.py  micro.py
miniwave/: compare_h5.py  run_all_tests.sh  test_compilation.py  test_cuda_kernels.py  test_end_to_end.py  test_hdf5_io.py  test_initialization.py  test_sequential.py
miniwave/c-frontend/: CMakeLists.txt  miniwave.c  selected_kernel.h.in
miniwave/kernels/: cuda_baseline.cu  cuda_kernel.cu  cuda_kernel.h  cuda_shared.cu  cuda_temporal.cu
miniwave/results/baseline/: baseline_vs_seq_64x10.compare  results_baseline_64x10.h5  results_validation_64x10.h5
miniwave/results/sequencial/: results_seq_64x10.h5
miniwave/results/shared/: results_shared_64x10.h5  shared_vs_seq_64x10.compare
miniwave/results/temporal/: results_temporal_64x10.h5  results_validation_64x10.h5  temporal_vs_seq_64x10.compare
miniwave/utils/: __init__.py  compiler.py  dataset_writer.py  kernel.py
simwave/kernel/backend/c_code/forward/constant_density/2d/: wave.c
simwave/kernel/backend/c_code/forward/constant_density/3d/: wave.c
simwave/kernel/backend/c_code/forward/variable_density/2d/: wave.c
simwave/kernel/backend/c_code/forward/variable_density/3d/: wave.c
simwave/kernel/frontend/: model.py
